test_suite/tests/ui/fail/misplace_attribute/command_in_mod.rs
mod module {
    use clapi::macros::*;

    #[command]
    fn app(){}
}

fn main(){}