test_suite/tests/ui/fail/misplace_attribute/command_in_mod.stderr
error: custom attribute panicked
 --> $DIR/command_in_mod.rs:4:5
  |
4 |     #[command]
  |     ^^^^^^^^^^
  |
  = help: message: `app` is not a top free function
